# SeqComp

./: .gitignore  CMakeLists.txt  command.readme
backup/: check_cccl_version  main.cu  main_e2e.ci  rle.cu  sort_test  sort_test.cu  version.cu
cmake/: cuda.cmake
codec/hf/include/: hfclass.hh
codec/hf/src/: hfbk.seq.cc  test.cu
codec/hf/src/detail/: hfclass.cuhip.inl
include/: basecall_compress.h  gpulz.h  huffman_decode.h  identifier_compressor.h  identifier_parser.h  identifier_processing.h  indexing.h  lorenzo.h  quality_scores_process.h  rle.h
src/: basecall_compress.cu  gpulz.cu  huffman_decode.cu  identifier_compressor.cu  identifier_parser.cu  identifier_processing.cu  indexing.cu  lorenzo.cu  main.cu  main_basecall.cu  main_indexing.cpp  quality_scores_process.cu  rle.cu
src/utils/: file_utils.cpp  file_utils.h
